crud users db and keycloak